WIP: fix app bar on iphone

--- a/src/sass/Search.scss
+++ b/src/sass/Search.scss
@@ -62,13 +62,13 @@
       box-sizing: border-box;
     }
   }
+
   &.appbar {
-    line-height: 100px;
     input {
       padding-right: 30px !important;
     }
     .material-icons {
-      line-height: 68px;
+      top: 10px;
       cursor: pointer;
     }
     .right-btn {
@@ -79,6 +79,12 @@
       flex-direction: column;
     }
   }
+}
+
+.mobile-search-wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .menu-toggle {
